--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+
+    </head>
+    <body>
+        <div>good</div>
+    </body>
     <button>hello</button>
 </html>
